--- a/.gitignore
+++ b/.gitignore
@@ -82,5 +82,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
-/Assets/Packages
-/Assets/Packages.meta
+/[Aa]ssets/Packages
+/[Aa]ssets/Packages.meta
